💄 Change style welcome api
