# api/app/Http/Controllers/SwaggerConfig.php
@@ -6,14 +6,10 @@ namespace App\Http\Controllers;
  * @OA\Info(
  *     title="Título de tu API",
  *     version="1.0.0",
- *     description="Descripción de tu API",
+ *     description="Permite a los desarrolladores gestionar un emocionante entorno de batallas de cartas. Los jugadores pueden crear barajas personalizables, participar en competiciones en tiempo real y subir de nivel para desbloquear nuevas cartas y habilidades. La API ofrece endpoints intuitivos para la gestión de usuarios, barajas y estadísticas, facilitando la integración de la experiencia de juego en diversas aplicaciones.",
  *     @OA\Contact(
- *         name="Nombre del Contacto",
- *         email="contacto@ejemplo.com"
- *     ),
- *     @OA\License(
- *         name="Licencia",
- *         url="http://www.ejemplo.com/licencia"
+ *         name="Isaac Caliz",
+ *         email="ecaliz@miumg.edu.gt"
  *     )
  * )
  */
